--- a/셰이더 번역/Optifine/SEUS/SEUS PTGI/SEUS PTGI HRR Test 2.1/ko_KR.lang
+++ b/셰이더 번역/Optifine/SEUS/SEUS PTGI/SEUS PTGI HRR Test 2.1/ko_KR.lang
@@ -4,7 +4,7 @@ option.shadowDistance=그림자 거리
 option.SUNLIGHT_BRIGHTNESS=태양광 밝기
 option.TORCHLIGHT_BRIGHTNESS=횃불 밝기
 option.TORCHLIGHT_COLOR_TEMPERATURE=횃불 색온도
-option.HELD_LIGHT=동적 핸드핼드라이트
+option.HELD_LIGHT=동적 손에 든 빛
 
 
 option.GODRAYS=대기 갓레이
